<resources>
    <string name="app_name">MonitorizadorMovimientos</string>
    <string name="tituloCrearCuenta">Crear una cuenta</string>
    <string name="mailCrearCuenta">Email</string>
    <string name="usuarioCrearCuenta">Elija un usuario</string>
    <string name="contrasenaCrearCuenta">Elija una contraseña</string>
    <string name="botonCrearCuenta">Crear perfil</string>
    <string name="botonLoginCrearCuenta">¿Ya tienes una cuenta? Inicia Sesión</string>
    <string name="tituloLogin">Iniciar sesión</string>
    <string name="usuarioLogin">Usuario</string>
    <string name="contrasenaLogin">Contraseña</string>
    <string name="botonLogin">Iniciar sesión</string>
    <string name="botonLoginLogin">¿Todavía no tienes una cuenta? Crea una cuenta nueva</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="seccion_1">Sección 1</string>
    <string name="seccion_2">Sección 2</string>
    <string name="otras_opciones">Otras opciones</string>
    <string name="opcion_1">Opción 1</string>
    <string name="opcion_2">Opción 2</string>
    <string name="seccion_3">Sección 3</string>
    <string name="usuario">Usuario</string>
    <string name="menu_abierto">Menu Abierto</string>
    <string name="menu_cerrado">Menu Cerrado</string>
    <string name="fragment1">Fragment 1</string>
    <string name="fragment2">Fragment 2</string>
    <string name="fragment3">Fragment 3</string>

</resources>
